# fuse-tableaufs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  reformat.sh
cmake/: FindZMQPP.cmake  GenerateCapnp.cmake  UseCxx11.cmake
src/: CMakeLists.txt  tableaufs.c  workgroup.c
src/app/: fuse_tfs.cc
src/capnp/: tfs.capnp  tfs.capnp.c++  tfs.capnp.h
src/connection/: connection_types.hpp  fuse_tfs.cc  host.hpp  parse_path.cc  parse_path.hpp  pg_connection.cc  pg_connection.hpp  pg_helpers.cc  pg_helpers.hpp  pg_query.hpp  pgconn.cc  pgconn.hpp  pgconn_c.h  result.hpp  slice.hpp  tfs_capnp.cc  tfs_capnp.hpp  tfs_postgres.cc  tfs_postgres.hpp  tfs_postgres_config.cc  tfs_postgres_config.hpp  tfs_sql_fragments.h  zmq_proxy.hpp
src/cpp14/: make_unique.hpp  markup.hpp  remove_cv_t.hpp  scope_exit.hpp
src/tests/: helper_test_pgconn.hpp  parse_path_test.cc  pgconn_interface_tests.cc  test_capnp.cc  test_open_file.cc  test_parse_path.cc  test_read_file.cc  test_runner.cc  test_tfs_postgres_readdir.cc  test_tfs_postgres_stat.cc  test_worker_readdir.cc  tfs_server_ip.hpp
src/utils/: cache.hpp  debug_utilities.cc  debug_utilities.hpp  logger.cc  logger.hpp  result.hpp  slice.hpp
src/utils/kj/: iostream.h
src/workers/: dispatcher.hpp  worker_base.hpp  worker_get_attributes.hpp  worker_helper.hpp  worker_readdir.cc  worker_readdir.hpp  worker_state.hpp  worker_types.hpp
test-data/: create_schema.sql  workbooks.csv  workgroup-projects.csv  workgroup-repository_data.csv  workgroup-sites.csv
test-data/files/: Superstore.twbx  test.twb
